--- a/pages/licensemenagement.html
+++ b/pages/licensemenagement.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="logo-container">
-            <img src="img/logo.jpg" alt="Website Logo" height="50px" width="50px">
+            <img src="../img/logo.jpg" alt="Website Logo" height="50px" width="50px">
             <h1>LicenseXpress</h1>
         </div>
         <nav>
@@ -25,7 +25,7 @@
                 <li><a href="officerviolation.php">Violation Management</a></li>
                 <li><a href="#">Reports</a></li>
                 <li class="dropdown" id = "left">
-                    <a href="#"><img src="img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
+                    <a href="#"><img src="../img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
                     <div class="dropdown-content">
                         <a href="logout.php">Logout</a>
                     </div>
@@ -52,7 +52,7 @@
 <!--displaycontainer-->
 <div class="container">
     <div class="box" id="box1">
-        <img src="img/user.png" alt="user" id="userimg1" height="100px" width="100px"><br><br>
+        <img src="../img/user.png" alt="user" id="userimg1" height="100px" width="100px"><br><br>
         <h3><strong>Name:</strong></h3><br>
         <h3><strong>License Number:</strong></h3><br>
         <h3><strong>Driver Points:</strong> </h3><br>
