--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
  
         <div class="header"> <!--navigation-->
             <div class="logo-container">
-                <img src="img/logo.jpg" alt="Website Logo" height="50px" width="50px">
+                <img src="../img/logo.jpg" alt="Website Logo" height="50px" width="50px">
                 <h1>LicenseXpress</h1>
             </div>
             <nav>
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="FAQ.html">FAQs</a></li>
                     <li><a href="ContactUs.html">Contact Us</a></li>
-                    <li id = "left"><a href="#"><img src="img/user.png" alt="user" id="userimg" height="25px" width="25px"></a></li>
+                    <li id = "left"><a href="#"><img src="../img/user.png" alt="user" id="userimg" height="25px" width="25px"></a></li>
                     <li id = "left"><a href="signup.html">Sign Up</a></li>
                     <li id = "left"><a href="login.html">Login</a></li>
                     <li id = "left">
