--- a/pages/medical.html
+++ b/pages/medical.html
@@ -42,7 +42,7 @@
 <body>
   <div class="header">  <!--navigationbar -->
     <div class="logo-container">
-        <img src="img/logo.jpg" alt="Website Logo" height="50px" width="50px">
+        <img src="../img/logo.jpg" alt="Website Logo" height="50px" width="50px">
         <h1>LicenseXpress</h1>
     </div>
     <nav>
@@ -74,7 +74,7 @@
             </li>          
             <li><a href="#">Reports</a></li>
             <li class="dropdown" id = "left">
-                <a href="#"><img src="img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
+                <a href="#"><img src="../img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
                 <div class="dropdown-content">
                     <a href="logout.php">Logout</a>
                 </div>
@@ -153,7 +153,7 @@
         <li><a href="FAQ_Registered user.html">FAQs</a></li>
         <li><a href="Contact Us_Registed user.html">Contact Us</a></li>
         <li><a href="#">Help and Support</a></li>
-        <li id = "left"><a href="#"><img src="img/logo.jpg" alt="user" id="userimg" height="50px" width="50px"></a></li>
+        <li id = "left"><a href="#"><img src="../img/logo.jpg" alt="user" id="userimg" height="50px" width="50px"></a></li>
     </ul>
 </nav>
 
