--- a/pages/onlinepayment.html
+++ b/pages/onlinepayment.html
@@ -32,7 +32,7 @@
 
         <div class="header">  <!--navigationbar -->
             <div class="logo-container">
-                <img src="img/logo.jpg" alt="Website Logo" height="50px" width="50px">
+                <img src="../img/logo.jpg" alt="Website Logo" height="50px" width="50px">
                 <h1>LicenseXpress</h1>
             </div>
             <nav>
@@ -64,7 +64,7 @@
                     </li>          
                     <li><a href="#">Reports</a></li>
                     <li class="dropdown" id = "left">
-                        <a href="#"><img src="img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
+                        <a href="#"><img src="../img/user.png" alt="user" id="userimg" height="25px" width="25px"></a>
                         <div class="dropdown-content">
                             <a href="logout.php">Logout</a>
                         </div>
@@ -86,12 +86,12 @@
         <center> 
             <form class = "form" method="POST" action="payment2.php" ><br>
                 <!-- Header of the application -->
-                <center><img src = "Pictures/Logo.png" width ="100" height = "100" >
+                <center><img src = "../Pictures/Logo.png" width ="100" height = "100" >
                 <h1>LicenseXPress</h1></center>
                 <h2 class = "subhead"> Payments </h2><br><br></p>
 
                 <label class = "label-type3"> Cards Accepted </label><br><br><br>
-                <img src = "Pictures/visa.jpg"  class = "image"  ><br><br><br>
+                <img src = "../Pictures/visa.jpg"  class = "image"  ><br><br><br>
 
                 <label for="Name" class = "label-type3"> Card Hoders Name <font class = "required">*</font></label><br><br>
                 <input type="text" id="Name" name="Name" class="textspecial "><br><br><br>
@@ -133,7 +133,7 @@
                     <li><a href="FAQ_Registered user.html">FAQs</a></li>
                     <li><a href="Contact Us_Registed user.html">Contact Us</a></li>
                     <li><a href="#">Help and Support</a></li>
-                    <li id = "left"><a href="#"><img src="img/logo.jpg" alt="user" id="userimg" height="50px" width="50px"></a></li>
+                    <li id = "left"><a href="#"><img src="../img/logo.jpg" alt="user" id="userimg" height="50px" width="50px"></a></li>
                 </ul>
             </nav>
             
